[gd_scene load_steps=12 format=3 uid="uid://dfvwlanihtgh7"]

[ext_resource type="Script" path="res://Scripts/scrPlayer.gd" id="1_mmjxm"]
[ext_resource type="Material" uid="uid://bcsr1ck18tigu" path="res://textures/PlayerMat.tres" id="2_1yy68"]
[ext_resource type="Texture2D" uid="uid://coqwimjmi8yq2" path="res://face.png" id="3_tm7ya"]
[ext_resource type="Texture2D" uid="uid://bylpmrg7yak7r" path="res://crosshair.png" id="5_iwquq"]
[ext_resource type="Theme" uid="uid://bt2dwcnmmfacw" path="res://uiTheme.tres" id="5_uwqy6"]
[ext_resource type="Texture2D" uid="uid://epjciyt4vrwq" path="res://hitmarkernonlethal.png" id="8_73r50"]
[ext_resource type="AudioStream" uid="uid://bpcesmirs8b7t" path="res://hitsound.ogg" id="8_sdjce"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_x5jbe"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pin38"]

[sub_resource type="Theme" id="Theme_yspqb"]
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 50
Label/font_sizes/font_size = 240

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_786kr"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Head/Camera3D/Sprite3D:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Head/Camera3D/RocketVM:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Head:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:rotation")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("Head/Camera3D:rotation")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("Head/Nametag:text")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath("Head/Camera3D/RocketVM:position")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath("Body:disabled")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath(".:visible")
properties/9/spawn = true
properties/9/replication_mode = 1

[node name="Player" type="CharacterBody3D" groups=["bodies", "players"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.51037, 0)
script = ExtResource("1_mmjxm")

[node name="Body" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_x5jbe")

[node name="CSGMesh3D" type="CSGMesh3D" parent="Body"]
material_override = ExtResource("2_1yy68")
mesh = SubResource("CapsuleMesh_pin38")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00465196, 0.8, 0.000170588)

[node name="Nametag" type="Label3D" parent="Head"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.155942)
fov = 90.0

[node name="Sprite3D" type="Sprite3D" parent="Head/Camera3D"]
transform = Transform3D(0.155, 0, 0, 0, 0.155, 0, 0, 0, 0.155, 0, -0.30526, -0.41059)
texture_filter = 2
texture = ExtResource("3_tm7ya")

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -0.6)
target_position = Vector3(0, 0, -1)

[node name="Area" type="Area3D" parent="."]

[node name="Model" type="CollisionShape3D" parent="Area"]
shape = SubResource("CapsuleShape3D_x5jbe")

[node name="InfoCorner" type="VBoxContainer" parent="."]
visible = false
offset_right = 512.0
offset_bottom = 256.0
theme = ExtResource("5_uwqy6")

[node name="ChatBox" type="Label" parent="InfoCorner"]
layout_mode = 2
theme = ExtResource("5_uwqy6")

[node name="InputBox" type="LineEdit" parent="InfoCorner"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_uwqy6")
placeholder_text = "Press \"/\" to chat"
context_menu_enabled = false

[node name="SpeedrunTimer" type="Label" parent="InfoCorner"]
layout_mode = 2

[node name="WaveInfo" type="Label" parent="InfoCorner"]
layout_mode = 2
theme = ExtResource("5_uwqy6")

[node name="Crosshair" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -48.0
offset_right = 432.0
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
mouse_filter = 2
texture = ExtResource("5_iwquq")

[node name="Hitmarker" type="TextureRect" parent="Crosshair"]
visible = false
show_behind_parent = true
layout_mode = 0
offset_right = 480.0
offset_bottom = 480.0
texture = ExtResource("8_73r50")

[node name="SpeedLabel" type="Label" parent="Crosshair"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.833
anchor_bottom = 0.833
offset_top = 0.159943
offset_right = 480.0
offset_bottom = 437.16
theme = SubResource("Theme_yspqb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_sdjce")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_786kr")

[node name="markerTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Area" to="." method="_on_area_area_entered"]
[connection signal="focus_exited" from="InfoCorner/InputBox" to="." method="_on_input_box_focus_exited"]
[connection signal="text_submitted" from="InfoCorner/InputBox" to="." method="_on_input_box_text_submitted"]
[connection signal="timeout" from="markerTimer" to="." method="_on_marker_timer_timeout"]
